# cmotion

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c
motion/: arrayobject.c  arrayobject.h  operation.c  operation.h  test.c  test.h  wrap_master.c  wrap_master.h
